--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^14.2.8",
+    "@nextui-org/react": "^2.4.6",
+    "framer-motion": "^11.5.4",
+    "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.8"
+    "react-toastify": "^10.0.5",
+    "web3": "^4.12.1"
   },
   "devDependencies": {
     "typescript": "^5",
